Implement API in which the endpoints will correspond to calls to the basic methods of the TaskManager